Grace/tests/gibbs/errors/t047.grace
// ERROR = L0010
method [(n) {
    print(n)
}
